# fuzc

./: Cargo.toml  LICENSE  README.md  example.java
comment_examples/java/: OldMacExample.java  UnixExample.java  WindowsExample.java
comment_examples/javascript/: JavaScriptExample.js
comment_examples/python/: PythonExample.py
comment_examples/typescript/: TypeScriptExample.ts
src/: main.rs  tui.rs
src/core/: discover.rs  engine.rs  mod.rs  parser.rs  search.rs  source.rs
