[package]
name = "fuzc"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["kiing-dom"]
description = "A fuzzy finder for code comments"
repository = "https://github.com/kiing-dom/fuzc"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.12.2"
